--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.2.0",
+    "node-sass": "^4.7.2",
     "three": "^0.89.0"
   },
   "devDependencies": {
