--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "d3-geo": "^1.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.2.0",
     "three": "^0.89.0"
