--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "d3-geo": "^1.9.1",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.2.0",
