--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-babel": "^7.0.1",
     "gulp-connect": "^5.2.0",
     "node-sass": "^4.7.2",
+    "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "three": "^0.89.0",
     "tween.js": "^16.6.0"
